clean_code_without_contests

--- a/notebooks/manual_game.ipynb
+++ b/notebooks/manual_game.ipynb
@@ -32,10 +32,67 @@
    },
    "outputs": [],
    "source": [
-    "opponent = \"uct_search\"\n",
-    "opponent_table = True\n",
-    "play_first = False\n",
-    "nb_playouts = 1000"
+    "is_table = {\n",
+    "    \"flat_mc\": False,\n",
+    "    \"ucb\": False,\n",
+    "    \"uct_search\": True,\n",
+    "    \"rave_search\": True,\n",
+    "    \"grave_search\": True,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Choose your opponent between flat_mc, ucb, uct_search, rave_search and grave_search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "opponent = \"uct_search\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Choose the number of playouts that your opponent have at each turn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "nb_playouts = 3000"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Choose if you play first"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "play_first = False"
    ]
   },
   {
@@ -46,11 +103,21 @@
    },
    "outputs": [],
    "source": [
+    "opponent_table = is_table[opponent]\n",
     "if play_first:\n",
     "    fight(p1=\"manual_move\", p1_table=False, p2=opponent, p2_table=opponent_table, nb_playouts=nb_playouts)\n",
     "else:\n",
     "    fight(p1=opponent, p1_table=opponent_table, p2=\"manual_move\", p2_table=False, nb_playouts=nb_playouts)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
