--- a/notebooks/contests.ipynb
+++ b/notebooks/contests.ipynb
@@ -70,59 +70,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true,
-    "hidden": true
-   },
-   "outputs": [],
-   "source": [
-    "board = Board()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false,
-    "hidden": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wall time: 3.95 s\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "move = board.flat_mc(n=1000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false,
-    "hidden": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "color : 1, column: 3.\n"
-     ]
-    }
-   ],
-   "source": [
-    "move.render()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "hidden": true
@@ -171,52 +118,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true,
-    "hidden": true
-   },
-   "outputs": [],
-   "source": [
-    "board = Board()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false,
-    "hidden": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 1.07 s, sys: 13.4 ms, total: 1.09 s\n",
-      "Wall time: 1.17 s\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "move = board.ucb(n=1000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "hidden": true
-   },
-   "outputs": [],
-   "source": [
-    "move.render()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "hidden": true
@@ -262,58 +163,6 @@
    },
    "source": [
     "# UCT"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "board = Board()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 1.33 s, sys: 52 ms, total: 1.39 s\n",
-      "Wall time: 1.39 s\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "transpositionTable = {}\n",
-    "move = board.uct_search(1000, transpositionTable)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "color : 1, column: 3.\n"
-     ]
-    }
-   ],
-   "source": [
-    "move.render()"
    ]
   },
   {
@@ -406,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -415,22 +264,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 100/100 [1:05:51<00:00, 39.52s/it]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 100/100 [2:21:47<00:00, 85.07s/it]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'flat_mc': 0.21, 'rave_search': 0.76, 'tie': 0.03}"
+       "{'flat_mc': 0.19, 'rave_search': 0.78, 'tie': 0.03}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "contest(\"rave_search\", True, \"flat_mc\", False, nb_fights=100, nb_playouts=500) "
+    "contest(\"rave_search\", True, \"flat_mc\", False, nb_fights=100, nb_playouts=1000) "
    ]
   },
   {
@@ -442,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -451,13 +300,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [59:20<00:00, 35.60s/it]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 100/100 [2:18:21<00:00, 83.02s/it]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'rave_search': 0.62, 'tie': 0.02, 'ucb': 0.36}"
+       "{'rave_search': 0.74, 'tie': 0.04, 'ucb': 0.22}"
       ]
      },
      "execution_count": 4,
@@ -466,7 +315,7 @@
     }
    ],
    "source": [
-    "contest(\"rave_search\", True, \"ucb\", False, nb_fights=100, nb_playouts=500) "
+    "contest(\"rave_search\", True, \"ucb\", False, nb_fights=100, nb_playouts=1000) "
    ]
   },
   {
@@ -478,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -487,22 +336,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 100/100 [1:29:26<00:00, 53.66s/it]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████| 100/100 [2:47:28<00:00, 100.49s/it]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'rave_search': 0.42, 'tie': 0.02, 'uct_search': 0.56}"
+       "{'rave_search': 0.49, 'tie': 0.06, 'uct_search': 0.45}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "contest(\"rave_search\", True, \"uct_search\", True, nb_fights=100, nb_playouts=500) #0.31/ 0.69"
+    "contest(\"rave_search\", True, \"uct_search\", True, nb_fights=100, nb_playouts=1000) #0.31/ 0.69"
    ]
   },
   {
@@ -521,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -530,34 +379,34 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 100/100 [3:37:04<00:00, 130.25s/it]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████| 100/100 [2:57:35<00:00, 106.55s/it]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'flat_mc': 0.67, 'grave_search_bis': 0.31, 'tie': 0.02}"
+       "{'flat_mc': 0.2, 'grave_search': 0.76, 'tie': 0.04}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "contest(\"grave_search\", \"flat_mc\", nb_fights=100, nb_playouts=500) #0.31 / 0.67"
+    "contest(\"grave_search\", True, \"flat_mc\", False, nb_fights=100, nb_playouts=1000) "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### GRAVE vs UCB_bis"
+    "### GRAVE vs UCB"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -566,22 +415,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 100/100 [3:08:16<00:00, 112.97s/it]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 100/100 [2:46:35<00:00, 99.95s/it]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'grave_search_bis': 0.38, 'tie': 0.0, 'ucb': 0.62}"
+       "{'grave_search': 0.59, 'tie': 0.02, 'ucb': 0.39}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "contest(\"grave_search\", \"ucb\", nb_fights=100, nb_playouts=500) #0.38/0.62"
+    "contest(\"grave_search\", True, \"ucb\", False, nb_fights=100, nb_playouts=1000) #0.38/0.62"
    ]
   },
   {
@@ -593,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -602,22 +451,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 100/100 [4:08:30<00:00, 149.10s/it]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████| 100/100 [2:50:39<00:00, 102.40s/it]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'grave_search_bis': 0.34, 'tie': 0.0, 'uct_search': 0.66}"
+       "{'grave_search': 0.42, 'tie': 0.08, 'uct_search': 0.5}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "contest(\"grave_search\", \"uct_search\", nb_fights=100, nb_playouts=500)"
+    "contest(\"grave_search\", True, \"uct_search\", True, nb_fights=100, nb_playouts=1000)"
    ]
   },
   {
@@ -629,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -638,22 +487,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 100/100 [7:13:41<00:00, 260.22s/it]\n"
+      "  2%|█▌                                                                             | 2/100 [06:46<5:52:36, 215.88s/it]"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'grave_search_bis': 0.49, 'rave_search_bis': 0.44, 'tie': 0.07}"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "contest(\"rave_search\", \"grave_search\", nb_fights=100, nb_playouts=500)"
+    "contest(\"rave_search\", True, \"grave_search\", True, nb_fights=100, nb_playouts=1000)"
    ]
   },
   {
@@ -662,17 +501,8 @@
     "collapsed": true
    },
    "source": [
-    "PUISSANCE 5 A TESTER"
+    "POURQUOI PAS FAIRE LES SCORES EN PUISSANCE 5"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
