--- a/notebooks/contests.ipynb
+++ b/notebooks/contests.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
@@ -16,9 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from src.game.board import Board\n",
@@ -29,9 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Playout"
    ]
@@ -40,8 +34,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -52,8 +45,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -62,18 +54,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Flat MC"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Random vs Flat MC"
    ]
@@ -81,10 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {
-    "collapsed": false,
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -110,18 +95,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# UCB "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### UCB vs FlatMC"
    ]
@@ -129,10 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false,
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -153,7 +131,7 @@
     }
    ],
    "source": [
-    "contest(\"flat_mc\", False, \"ucb\", False, nb_fights=200, nb_playouts=1000) # 0.455 / 0.545"
+    "contest(\"flat_mc\", False, \"ucb\", False, nb_fights=200, nb_playouts=1000)"
    ]
   },
   {
@@ -175,9 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -211,9 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -256,9 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -292,9 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -328,9 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -351,7 +319,7 @@
     }
    ],
    "source": [
-    "contest(\"rave_search\", True, \"uct_search\", True, nb_fights=100, nb_playouts=1000) #0.31/ 0.69"
+    "contest(\"rave_search\", True, \"uct_search\", True, nb_fights=100, nb_playouts=1000)"
    ]
   },
   {
@@ -371,9 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -407,9 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -430,7 +394,7 @@
     }
    ],
    "source": [
-    "contest(\"grave_search\", True, \"ucb\", False, nb_fights=100, nb_playouts=1000) #0.38/0.62"
+    "contest(\"grave_search\", True, \"ucb\", False, nb_fights=100, nb_playouts=1000)"
    ]
   },
   {
@@ -443,9 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -478,30 +440,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  2%|█▌                                                                             | 2/100 [06:46<5:52:36, 215.88s/it]"
+      "100%|██████████| 100/100 [6:03:36<00:00, 218.17s/it] \n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'rave_search': 0.57, 'grave_search': 0.35, 'tie': 0.08}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "contest(\"rave_search\", True, \"grave_search\", True, nb_fights=100, nb_playouts=1000)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "POURQUOI PAS FAIRE LES SCORES EN PUISSANCE 5"
    ]
   }
  ],
@@ -521,7 +482,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
