--- a/notebooks/manual_game.ipynb
+++ b/notebooks/manual_game.ipynb
@@ -17,11 +17,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "from src.game.fight import fight"
+    "from src.game.fight import fight\n",
+    "from src.gui.fight_gui import play_with_gui "
    ]
   },
   {
@@ -92,7 +93,25 @@
    },
    "outputs": [],
    "source": [
-    "play_first = False"
+    "play_first = True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Choose if you play with gui or with simple interface"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "gui = True"
    ]
   },
   {
@@ -104,20 +123,13 @@
    "outputs": [],
    "source": [
     "opponent_table = is_table[opponent]\n",
+    "fight_function = play_with_gui if gui else fight\n",
+    "\n",
     "if play_first:\n",
-    "    fight(p1=\"manual_move\", p1_table=False, p2=opponent, p2_table=opponent_table, nb_playouts=nb_playouts)\n",
+    "    fight_function(p1=\"manual_move\", p1_table=False, p2=opponent, p2_table=opponent_table, nb_playouts=nb_playouts)\n",
     "else:\n",
-    "    fight(p1=opponent, p1_table=opponent_table, p2=\"manual_move\", p2_table=False, nb_playouts=nb_playouts)"
+    "    fight_function(p1=opponent, p1_table=opponent_table, p2=\"manual_move\", p2_table=False, nb_playouts=nb_playouts)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
